# token_contract

./: CMakeLists.txt  README.md  README_ZH.md  build-unix.md
conf/: conf.json  log.json
doc/: build-unix.md  conf_example.json  smart_contract.sql  tokenization_api.md  tokenization_api_zh.md
doc/params/: asset_definition.json  contract_offer.json  get_utxo.json  token_recieve.json  token_send.json
src/: consumer.cpp  consumer.h  consumer_handler.cpp  consumer_handler.h  contractcli.cpp  contractd.cpp  httpserver.cpp  httpserver.h  init.cpp  init.h  logic.cpp  logic.h  logiccli.cpp  logiccli.h  logickafka.cpp  logickafka.h  logicparsetx.cpp  logicparsetx.h  main.cpp  parsetx.cpp  parsetx.h  producer.cpp  producer.h  scanblock.cpp  tokencli.cpp  tokend.cpp
src/common/: util.cpp  util.h
src/contract/: contract.cpp  contract.h  contractobject.cpp  contractobject.h  designcontract.cpp  designcontract.h  txparse.cpp  txparse.h
src/contract_machine/: action.cpp  action.h  actionobject.cpp  actionobject.h  assettypes.cpp  assettypes.h  contractparse.cpp  contractparse.h  machinestack.cpp  machinestack.h
src/data/: db_mysql.cpp  db_mysql.h
src/interactive/: interactive.cpp  interactive.h  tokeninteractive.cpp  tokeninteractive.h
src/internal/: handler.cpp  handler.h  handlercli.cpp  handlercli.h  handlerscan.cpp  handlerscan.h
src/test/: CMakeLists.txt  test_action.cpp  test_cli.cpp  test_contract.cpp  test_interactive.cpp  test_logic.cpp  test_machine.cpp  testingsetup.cpp  testingsetup.h
src/transaction/: tx.cpp  tx.h  txobject.cpp  txobject.h
